Started work on PS03 no.1

--- a/ProblemSet03.ipynb
+++ b/ProblemSet03.ipynb
@@ -32,10 +32,10 @@
    "source": [
     "# Fill in the fields as described\n",
     "class Student:\n",
-    "    first = \"your given name\"\n",
-    "    last = \"your last name\"\n",
-    "    onyen = \"your unc onyen (the part of your email address before the '@')\"\n",
-    "    pid = \"your pid\""
+    "    first = \"Calvin\"\n",
+    "    last = \"Barker\"\n",
+    "    onyen = \"barkerc1\"\n",
+    "    pid = \"720391993\""
    ]
   },
   {
@@ -98,13 +98,32 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "number": 1,
     "section": "answer"
    },
    "outputs": [],
    "source": [
-    "#Enter your Python 2 code here"
+    "import csv, sqlite3, datetime\n",
+    "\n",
+    "monkepo = sqlite3.connect(\"monkepo.csv\")\n",
+    "cur = monkepo.cursor()\n",
+    "cur.execute(\"\"\"CREATE TABLE Mokepo (\n",
+    "                mid INTEGER PRIMARY KEY AUTOINCREMENT, \n",
+    "                name TEXT NOT NULL)\"\"\")\n",
+    "cur.execute(\"\"\"CREATE TABLE Appearance (\n",
+    "                mid INTEGER,\n",
+    "                latitude REAL,\n",
+    "                longitude REAL,\n",
+    "                datetime REAL,\n",
+    "                PRIMARY KEY(mid, latitude, longitude, datetime))\"\"\")\n",
+    "cur.execute(\"\"\"CREATE TABLE Class (\n",
+    "                mid INTEGER,\n",
+    "                major INTEGER,\n",
+    "                type TEXT,\n",
+    "                PRIMARY KEY(mid, major))\"\"\")\n",
+    "monkepo.commit()\n",
+    "mokepo.close()"
    ]
   },
   {
@@ -296,10 +315,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -311,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
