battery about to die

--- a/ProblemSet03.ipynb
+++ b/ProblemSet03.ipynb
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "number": 3,
@@ -1021,13 +1021,13 @@
        "[123 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sqlite3, operator\n",
+    "import sqlite3, operator, pandas\n",
     "\n",
     "def monkepoCountGrp(str):\n",
     "    monkepo = sqlite3.connect(str)\n",
