about to start problem set 5

--- a/ProblemSet04.ipynb
+++ b/ProblemSet04.ipynb
@@ -2599,7 +2599,7 @@
     "section": "answer"
    },
    "source": [
-    "3840 = (avg actor size"
+    "3840 = (avg actor size*avg cast size)/2"
    ]
   },
   {
