continual work on ps5

--- a/L08Notebook (1)/BasicQueries.ipynb
+++ b/L08Notebook (1)/BasicQueries.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import iSQL\n",
     "\n",
-    "Q1 = iSQL.parser(\"Baby.db\")"
+    "Q1 = iSQL.parser(\"movies.db\")"
    ]
   },
   {
